--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,17 @@
         "lavary/laravel-menu": "^1.8",
         "livewire/livewire": "^3.0",
         "nasirkhan/module-manager": "^1.0",
+        "norkunas/youtube-dl-php": "dev-master",
         "nwidart/laravel-modules": "^10.0",
         "predis/predis": "^2.1",
+        "raiym/instagram-php-scraper": "^0.12.9",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-html": "^3.2",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-permission": "^5.9",
         "unisharp/laravel-filemanager": "^2.6",
-        "yajra/laravel-datatables-oracle": "^10.3",
-        "raiym/instagram-php-scraper": "^0.12.9"
+        "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
