--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "arcanedev/log-viewer": "^10.0",
         "guzzlehttp/guzzle": "^7.5",
         "hashids/hashids": "^5.0",
+        "james-heinrich/getid3": "^1.9",
         "laracasts/flash": "^3.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
